# bluetooth-beacon-consumer

./: .agents  .gitignore  Cargo.toml  MANUAL_TESTS.md  README.md
src/: lib.rs  main.rs
src/ble/: mod.rs
src/sensor/: data.rs  mod.rs  validation.rs
src/storage/: archive.rs  csv.rs  mod.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx
